--- a/CSS/Default Classes.css
+++ b/CSS/Default Classes.css
@@ -89,6 +89,7 @@
 }
 div#logo, div.logo {
 	width: 100%;
+	max-width: 1200px;
 	height: 0;
 }
 
@@ -96,6 +97,9 @@ div#logo, div.logo {
 .menuarea, #menu {
 	width: 100%;
 	height: auto;
+}
+.sf-menu {
+	width: 100%;
 }
 #menu ul li.menuitem {
 	width: auto !important;
@@ -118,7 +122,7 @@ a.menulink, a.menulink:link, a.menulink:active, a.menulink:visited {
 
 /* General */
 .pagebody {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
 h1 {
   font-size: 36px;
@@ -156,7 +160,7 @@ p {
 }
 
 /* Scrollers */
-#scroller_956 {
+#scroller_++++ {
 	width: 100%;
 	height: 400px; 
 	background-color: transparent;
@@ -172,6 +176,8 @@ p {
 a.button {
 	padding: 0.7em 2em;
 	display: inline-block;
+	text-decoration: none;
+	transition: all 0.3s ease;
 }
 
 /* Parallax */
@@ -189,12 +195,11 @@ a.button {
 }
 
 /* Background-color panels */
-
 .white-panel {
 	background-color: #fff;
 }
 .grey-panel {
-	background-color: #808080;
+	background-color: #afafaf;
 }
 
 
