--- a/CSS/Default-Classes.css
+++ b/CSS/Default-Classes.css
@@ -1,245 +1,316 @@
 /*=======STRUCTURE========*/
+
 .panel-inner {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
 }
+
 .pad20 {
-	padding-top: 20px;
-	padding-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
+
 .pad40 {
-	padding-top: 40px;
-	padding-bottom: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
+
 .pad60 {
-	padding-top: 60px;
-	padding-bottom: 60px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
+
 .pad80 {
-	padding-top: 80px;
-	padding-bottom: 80px;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
+
 .pad100 {
-	padding-top: 100px;
-	padding-bottom: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
+
 .pad-top20 {
-	padding-top: 20px;
+  padding-top: 20px;
 }
+
 .pad-top40 {
-   padding-top: 40px;
+  padding-top: 40px;
 }
+
 .pad-top60 {
-	padding-top: 60px;
+  padding-top: 60px;
 }
+
 .pad-top80 {
-	padding-top: 80px;
+  padding-top: 80px;
 }
+
 .pad-top100 {
-	padding-top: 100px;
+  padding-top: 100px;
 }
+
 .pad-bot20 {
-	padding-bottom: 20px;
+  padding-bottom: 20px;
 }
+
 .pad-bot40 {
-	padding-bottom: 40px;
+  padding-bottom: 40px;
 }
+
 .pad-bot60 {
-	padding-bottom: 60px;
+  padding-bottom: 60px;
 }
+
 .pad-bot80 {
-	padding-bottom: 80px;
+  padding-bottom: 80px;
 }
+
 .pad-bot100 {
-	padding-bottom: 100px;
+  padding-bottom: 100px;
 }
+
 .nopad-left {
-	padding-left: 0;
+  padding-left: 0;
 }
+
 .nopad-right {
-	padding-right: 0;
+  padding-right: 0;
 }
+
 .nopad-top {
-	padding-top: 0;
+  padding-top: 0;
 }
+
 .nopad-bottom {
-	padding-bottom: 0;
+  padding-bottom: 0;
 }
+
 .imgFill {
-	background-size: cover;
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
+
 .text-left {
-	text-align: left; 
+  text-align: left;
 }
+
 .text-center {
-	text-align: center;
+  text-align: center;
 }
+
 .text-right {
-	text-align: right;
+  text-align: right;
 }
 
 /*=======LOGO========*/
+
 .logoarea {
-	width: 100%;
-	background-color: #fff;
-	height: 0;
+  width: 100%;
+  background-color: #fff;
+  height: 0;
 }
-div#logo, div.logo {
-	width: 100%;
-	max-width: 1200px;
-	height: 0;
+
+div#logo,
+div.logo {
+  width: 100%;
+  max-width: 1200px;
+  height: 0;
 }
 
 /*=======MENU========*/
-.menuarea, #menu {
-	width: 100%;
-	height: auto;
+
+.menuarea,
+#menu {
+  width: 100%;
+  height: auto;
 }
+
 .sf-menu {
-	width: 100%;
+  width: 100%;
 }
+
 #menu ul li.menuitem {
-	width: auto !important;
+  width: auto !important;
 }
-a.menulink, a.menulink:link, a.menulink:active, a.menulink:visited {
-	height: auto;
-	line-height: 1.5;
+
+a.menulink,
+a.menulink:link,
+a.menulink:active,
+a.menulink:visited {
+  height: auto;
+  line-height: 1.5;
 }
+
 .sf-menu ul {
   top: 100% !important;
   width: auto;
 }
+
 .sf-menu .submenuitem li {
   width: auto;
 }
+
 .sf-menu .submenuitem li a {
   width: auto;
 }
+
 /*=======CONTENT========*/
 
 /* General */
+
 .pagebody {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
+
 h1 {
-  font-size: 36px;
+  font-size: 3.6rem;
   line-height: 1.3;
 }
+
 h2 {
-  font-size: 30px;
+  font-size: 3rem;
   line-height: 1.3;
 }
+
 h3 {
-  font-size: 26px;
+  font-size: 2.6rem;
   line-height: 1.3;
 }
+
 h4 {
-  font-size: 22px;
+  font-size: 2.2rem;
   line-height: 1.3;
 }
+
 h5 {
-  font-size: 20px;
+  font-size: 2rem;
   line-height: 1.3;
 }
+
 h6 {
-  font-size: 18px;
+  font-size: 1.8rem;
   line-height: 1.3;
 }
+
 p {
-  font-size: 15px;
-  line-height: 1.3;
+  font-size: 1.5rem;
+  line-height: 1.5;
 }
+
 .white * {
-	color: #fff;
+  color: #fff;
 }
+
 .black * {
-	color: #000;
+  color: #000;
 }
 
 /* Scrollers */
+
 #scroller_++++ {
-	width: 100%;
-	height: 400px; 
-	background-color: transparent;
-	border: none;
+  width: 100%;
+  height: 400px;
+  background-color: transparent;
+  border: none;
 }
+
 .scrollermessage {
-	width: inherit !important;
-	height: inherit !important;
-	background: inherit;
+  width: inherit !important;
+  height: inherit !important;
+  background: inherit;
 }
 
 /* Buttons */
+
 a.button {
-	padding: 0.7em 2em;
-	display: inline-block;
-	text-decoration: none;
-	transition: all 0.3s ease;
+  padding: 0.7em 2em;
+  display: inline-block;
+  text-decoration: none;
+  transition: all 0.3s ease;
 }
 
 /* Parallax */
+
 .parallax-wrap {
-	height: 100%;
-	position: relative;
+  height: 100%;
+  position: relative;
 }
+
 .parallax-bg {
-	background: none 50% 50%/cover no-repeat fixed;
-	width: 100%;
-	height: inherit;
-	position: absolute;
-	top: 0;
-	z-index: -1;
+  background: none 50% 50%/cover no-repeat fixed;
+  width: 100%;
+  height: inherit;
+  position: absolute;
+  top: 0;
+  z-index: -1;
 }
 
 /* Background-color panels */
+
 .white-panel {
-	background-color: #fff;
+  background-color: #fff;
 }
+
 .grey-panel {
-	background-color: #afafaf;
+  background-color: #afafaf;
 }
+
 /* Animations */
 
 /*=======FOOTER========*/
 
-
 /*=======MEDIA QUERIES MUST BE AT END========*/
+
 /* Extra large devices (large laptops and desktops, 1200px and below) */
+
 @media only screen and (max-width: 1200px) {
-	.sidr {
-		box-shadow: none;
-		background-color: #333;
-	}
-	.sidr ul li {
-		border: none;
-	}
-	.sidr ul li:hover {
-		background-color: #808080;
-	}
-	.sidr ul li:hover > a {
-		box-shadow: none;
-	}
-	a#menubtn {
-		background-color: #333;
-		top: 10px;
-	}
-} 
+  .sidr {
+    box-shadow: none;
+    background-color: #333;
+  }
+  .sidr ul li {
+    border: none;
+  }
+  .sidr ul li:hover {
+    background-color: #808080;
+  }
+  .sidr ul li:hover>a {
+    box-shadow: none;
+  }
+  a#menubtn {
+    background-color: #333;
+    top: 10px;
+  }
+}
 
 /* Large devices (laptops/desktops, 992px and below) */
-@media only screen and (max-width: 992px) {...}
+
+@media only screen and (max-width: 992px) {
+  ...
+}
 
 /* Medium devices (landscape tablets, 768px and below) */
-@media only screen and (max-width: 768px) {...}
+
+@media only screen and (max-width: 768px) {
+  ...
+}
 
 /* Extra small devices (phones, 576px and below) */
-@media only screen and (max-width: 576px) {...}
 
+@media only screen and (max-width: 576px) {
+  ...
+}
 
 /* IE MEDIA QUERY - Add here any IE specific fixes */
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {...}
+
+@media all and (-ms-high-contrast: none),
+(-ms-high-contrast: active) {
+  ...
+}
+
 /*==========END MEDIA QUERIES======*/
 
 /*==========END CSS======*/
