--- a/CSS/Default-Classes.css
+++ b/CSS/Default-Classes.css
@@ -1,139 +1,64 @@
-/*=======STRUCTURE========*/
+#LogoText2996 {
+  display: none;
+}
 
-.panel-inner {
+/* DEFAULT VERSION START */
+
+body {
+  font-family: 'Segoe UI',
+Tahoma,
+Geneva,
+Verdana,
+sans-serif
+  font-size: 10px;
+  line-height: 1.5;
+}
+
+#container {
+  margin: 0;
+}
+
+/**** LOGOAREA ****/
+/******************/
+.logoarea {
+  height: 140px;
+  background-color: #e4e4e4;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+#LogoText3040 {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+}
+
+/**** MENUAREA ****/
+/******************/
+.menuarea {
+  background-color: #ea8b20;
+}
+
+#menu {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
-}
-
-.pad20 {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.pad40 {
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
-.pad60 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-.pad80 {
-  padding-top: 80px;
-  padding-bottom: 80px;
-}
-
-.pad100 {
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-
-.pad-top20 {
-  padding-top: 20px;
-}
-
-.pad-top40 {
-  padding-top: 40px;
-}
-
-.pad-top60 {
-  padding-top: 60px;
-}
-
-.pad-top80 {
-  padding-top: 80px;
-}
-
-.pad-top100 {
-  padding-top: 100px;
-}
-
-.pad-bot20 {
-  padding-bottom: 20px;
-}
-
-.pad-bot40 {
-  padding-bottom: 40px;
-}
-
-.pad-bot60 {
-  padding-bottom: 60px;
-}
-
-.pad-bot80 {
-  padding-bottom: 80px;
-}
-
-.pad-bot100 {
-  padding-bottom: 100px;
-}
-
-.nopad-left {
-  padding-left: 0;
-}
-
-.nopad-right {
-  padding-right: 0;
-}
-
-.nopad-top {
-  padding-top: 0;
-}
-
-.nopad-bottom {
-  padding-bottom: 0;
-}
-
-.imgFill {
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-right {
-  text-align: right;
-}
-
-/*=======LOGO========*/
-
-.logoarea {
-  width: 100%;
-  background-color: #fff;
-  height: 0;
-}
-
-div#logo,
-div.logo {
-  width: 100%;
-  max-width: 1200px;
-  height: 0;
-}
-
-/*=======MENU========*/
-
-.menuarea,
-#menu {
-  width: 100%;
-  height: auto;
+  padding: 0;
 }
 
 .sf-menu {
-  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: flex-end;
 }
 
-#menu ul li.menuitem {
+.sf-menu li {
   width: auto !important;
+  list-style: none;
+  float: unset;
 }
 
 a.menulink,
@@ -141,98 +66,57 @@ a.menulink:link,
 a.menulink:active,
 a.menulink:visited {
   height: auto;
-  line-height: 1.5;
+  font-size: 16px;
+  line-height: 3;
+  color: #fff;
+  transition: all 0.3s ease;
+  padding: 0 15px;
+  background-color: transparent;
 }
 
-.sf-menu ul {
+.sf-menu a.menulink:hover {
+  background-color: red;
+}
+
+.sf-menu .submenuitem {
+  width: 100%;
+  position: absolute;
+  z-index: 10;
   top: 100% !important;
-  width: auto;
+  padding: 0;
+  background-color: #ea8b20;
 }
 
 .sf-menu .submenuitem li {
   width: auto;
+
+  line-height: 2.5;
 }
 
 .sf-menu .submenuitem li a {
   width: auto;
-}
-
-/*=======CONTENT========*/
-
-/* General */
-
-.pagebody {
-  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-}
-
-h1 {
-  font-size: 3.6rem;
-  line-height: 1.3;
-}
-
-h2 {
-  font-size: 3rem;
-  line-height: 1.3;
-}
-
-h3 {
-  font-size: 2.6rem;
-  line-height: 1.3;
-}
-
-h4 {
-  font-size: 2.2rem;
-  line-height: 1.3;
-}
-
-h5 {
-  font-size: 2rem;
-  line-height: 1.3;
-}
-
-h6 {
-  font-size: 1.8rem;
-  line-height: 1.3;
-}
-
-p {
-  font-size: 1.5rem;
-  line-height: 1.5;
-}
-
-.white * {
   color: #fff;
+  padding: 0 15px;
 }
 
-.black * {
-  color: #000;
+.sf-menu li li a:focus,
+.sf-menu li li a:hover,
+.sf-menu li li a:active {
+  background-color: #ea8b20;
 }
 
-/* Scrollers */
+/* MOBILE MENU */
+a#menubtn {}
 
-#scroller_++++ {
+a#menubtn:before {}
+
+/**** CONTENT ****/
+/*****************/
+.panel-inner {
   width: 100%;
-  height: 400px;
-  background-color: transparent;
-  border: none;
+  max-width: 1200px;
+  margin: 0 auto;
 }
-
-.scrollermessage {
-  width: inherit !important;
-  height: inherit !important;
-  background: inherit;
-}
-
-/* Buttons */
-
-a.button {
-  padding: 0.7em 2em;
-  display: inline-block;
-  text-decoration: none;
-  transition: all 0.3s ease;
-}
-
-/* Parallax */
 
 .parallax-wrap {
   height: 100%;
@@ -245,72 +129,177 @@ a.button {
   height: inherit;
   position: absolute;
   top: 0;
-  z-index: -1;
 }
 
-/* Background-color panels */
-
-.white-panel {
-  background-color: #fff;
+.imgFill {
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
 
-.grey-panel {
-  background-color: #afafaf;
+img {
+  width: 100%;
+  position: relative;
 }
 
-/* Animations */
+/* TEXT AND HEADINGS */
 
-/*=======FOOTER========*/
-
-/*=======MEDIA QUERIES MUST BE AT END========*/
-
-/* Extra large devices (large laptops and desktops, 1200px and below) */
-
-@media only screen and (max-width: 1200px) {
-  .sidr {
-    box-shadow: none;
-    background-color: #333;
-  }
-  .sidr ul li {
-    border: none;
-  }
-  .sidr ul li:hover {
-    background-color: #808080;
-  }
-  .sidr ul li:hover>a {
-    box-shadow: none;
-  }
-  a#menubtn {
-    background-color: #333;
-    top: 10px;
-  }
+h1 {
+  font-size: 55px;
+  margin-top: 0;
 }
 
-/* Large devices (laptops/desktops, 992px and below) */
-
-@media only screen and (max-width: 992px) {
-  ...
+h2 {
+  font-size: 42px;
+  margin-top: 0;
 }
 
-/* Medium devices (landscape tablets, 768px and below) */
-
-@media only screen and (max-width: 768px) {
-  ...
+h3 {
+  font-size: 36px;
+  margin-top: 0;
 }
 
-/* Extra small devices (phones, 576px and below) */
-
-@media only screen and (max-width: 576px) {
-  ...
+h4 {
+  font-size: 28px;
+  margin-top: 0;
 }
 
-/* IE MEDIA QUERY - Add here any IE specific fixes */
-
-@media all and (-ms-high-contrast: none),
-(-ms-high-contrast: active) {
-  ...
+h5 {
+  font-size: 24px;
+  margin-top: 0;
 }
 
-/*==========END MEDIA QUERIES======*/
+h6 {
+  font-size: 20px;
+  margin-top: 0;
+}
 
-/*==========END CSS======*/
+p,
+ul,
+ol {
+  line-height: 1.5;
+  margin-top: 0;
+}
+
+.textLeft {
+  text-align: left;
+}
+
+.textCenter {
+  text-align: center;
+}
+
+.textRight {
+  text-align: right;
+}
+
+.textJustify {
+  text-align: justify;
+}
+
+/* PADDING */
+.pad30 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.pad50 {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.pad80 {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.pad100 {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+/* PADDING TOP */
+.pad3T0 {
+  padding-top: 30px;
+}
+
+.padT50 {
+  padding-top: 50px;
+}
+
+.padT80 {
+  padding-top: 80px;
+}
+
+.padT100 {
+  padding-top: 100px;
+}
+
+/* PADDING BOTTOM */
+.padB30 {
+  padding-bottom: 30px;
+}
+
+.padB50 {
+  padding-bottom: 50px;
+}
+
+.padB80 {
+  padding-bottom: 80px;
+}
+
+.padB100 {
+  padding-bottom: 100px;
+}
+
+/* LINKS AND BUTTONS */
+a:link,
+a:focus,
+a:active {
+  color: #ea8b20;
+}
+
+.btn {
+  display: inline-block;
+  padding: 1em;
+  transition: all 0.3s ease;
+}
+
+.btn--ghost {
+  border: 1px solid;
+}
+
+.btn--color {
+  /* change the class name to correspond to the colour used */
+  background-color: hotpink;
+  color: #fff;
+}
+
+#scroller_ {
+  width: 100%;
+  height: 400px;
+  background-color: transparent;
+  border: none;
+}
+
+.scrollermessage {
+  width: inherit !important;
+  height: inherit !important;
+  background: inherit;
+}
+
+/* CUSTOM STYLING */
+
+.site-logo {
+  max-width: 250px;
+}
+
+
+/* MEDIA QUERY */
+@media screen and (min-width: 576px) {}
+
+@media screen and (min-width: 768px) {}
+
+@media screen and (min-width: 992px) {}
+
+@media screen and (min-width: 1200px) {}
